force-app/main/default/objects/Publicacao__c/Publicacao__c.object-meta.xml
<CustomObject>
    <label>Publicação</label>
    <nameField>
        <label>Código</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publicações</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>