force-app/main/default/objects/Publicacao__c/fields/Comarca__c.field-meta.xml
<CustomField>
    <fullName>Comarca__c</fullName>
    <label>Comarca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>