force-app/main/default/objects/Publicacao__c/fields/Data_da_publicacao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_publicacao__c</fullName>
    <label>Data da publicação</label>
    <type>Date</type>
</CustomField>