force-app/main/default/objects/Publicacao__c/fields/Descricao2__c.field-meta.xml
<CustomField>
    <fullName>Descricao2__c</fullName>
    <label>Descrição (continuação)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>