force-app/main/default/objects/Publicacao__c/fields/Diario__c.field-meta.xml
<CustomField>
    <fullName>Diario__c</fullName>
    <label>Diário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>