force-app/main/default/objects/Publicacao__c/fields/Forum__c.field-meta.xml
<CustomField>
    <fullName>Forum__c</fullName>
    <label>Fórum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>