force-app/main/default/objects/Publicacao__c/fields/Processo_Judicial__c.field-meta.xml
<CustomField>
    <fullName>Processo_Judicial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Processo Judicial</label>
    <referenceTo>Processo_Judicial__c</referenceTo>
    <relationshipLabel>Desdobramentos</relationshipLabel>
    <relationshipName>Desdobramentos</relationshipName>
    <type>Lookup</type>
</CustomField>