force-app/main/default/objects/Publicacao__c/fields/Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Relacionado__c</fullName>
    <label>Relacionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>