force-app/main/default/objects/Publicacao__c/fields/Vara__c.field-meta.xml
<CustomField>
    <fullName>Vara__c</fullName>
    <label>Vara</label>
    <length>255</length>
    <type>Text</type>
</CustomField>