force-app/main/default/objects/Publicacao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Data_da_publicacao__c</columns>
    <columns>Status2__c</columns>
    <columns>Relacionado__c</columns>
    <columns>Processo_Judicial__c</columns>
    <columns>Comarca__c</columns>
    <columns>Forum__c</columns>
    <columns>Diario__c</columns>
    <columns>Estado__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>