force-app/main/default/objects/Publicacao__c/listViews/HOSPCOM.listView-meta.xml
<ListView>
    <fullName>HOSPCOM</fullName>
    <columns>NAME</columns>
    <columns>Data_da_publicacao__c</columns>
    <columns>Status2__c</columns>
    <columns>Processo_Judicial__c</columns>
    <columns>Comarca__c</columns>
    <columns>Forum__c</columns>
    <columns>Diario__c</columns>
    <columns>Estado__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Relacionado__c</field>
        <operation>contains</operation>
        <value>HOSPCOM</value>
    </filters>
    <label>HOSPCOM</label>
</ListView>